<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/md_theme_background">

    <ImageView
        android:id="@+id/photoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/photoTitle"
        style="@style/Text.Flickr.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:textColor="@color/md_theme_onBackground"
        android:text=""/>

    <TextView
        android:id="@+id/photoOwner"
        style="@style/Text.Flickr.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/md_text_secondary"
        android:text=""/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_s"
        app:singleLine="true"
        app:singleSelection="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_favorite"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/outline_favorite_24"/>

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_share"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/outline_bookmark_heart_24"/>

        <ImageButton
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_download"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_image_not_supported_24"/>
    </LinearLayout>

</LinearLayout>
